; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_filter.c_sock_addr_func_proto.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_filter.c_sock_addr_func_proto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bpf_func_proto = type { i32 }
%struct.bpf_prog = type { i32 }

@bpf_get_current_uid_gid_proto = common dso_local global %struct.bpf_func_proto zeroinitializer, align 4
@bpf_bind_proto = common dso_local global %struct.bpf_func_proto zeroinitializer, align 4
@bpf_get_socket_cookie_sock_addr_proto = common dso_local global %struct.bpf_func_proto zeroinitializer, align 4
@bpf_get_local_storage_proto = common dso_local global %struct.bpf_func_proto zeroinitializer, align 4
@bpf_sk_storage_get_proto = common dso_local global %struct.bpf_func_proto zeroinitializer, align 4
@bpf_sk_storage_delete_proto = common dso_local global %struct.bpf_func_proto zeroinitializer, align 4
@bpf_sk_release_proto = common dso_local global %struct.bpf_func_proto zeroinitializer, align 4
@bpf_sock_addr_sk_lookup_tcp_proto = common dso_local global %struct.bpf_func_proto zeroinitializer, align 4
@bpf_sock_addr_sk_lookup_udp_proto = common dso_local global %struct.bpf_func_proto zeroinitializer, align 4
@bpf_sock_addr_skc_lookup_tcp_proto = common dso_local global %struct.bpf_func_proto zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.bpf_func_proto* (i32, %struct.bpf_prog*)* @sock_addr_func_proto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.bpf_func_proto* @sock_addr_func_proto(i32 %0, %struct.bpf_prog* %1) #0 {
  %3 = alloca %struct.bpf_func_proto*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bpf_prog*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.bpf_prog* %1, %struct.bpf_prog** %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %18 [
    i32 136, label %7
    i32 137, label %8
    i32 134, label %14
    i32 135, label %15
    i32 129, label %16
    i32 130, label %17
  ]

7:                                                ; preds = %2
  store %struct.bpf_func_proto* @bpf_get_current_uid_gid_proto, %struct.bpf_func_proto** %3, align 8
  br label %21

8:                                                ; preds = %2
  %9 = load %struct.bpf_prog*, %struct.bpf_prog** %5, align 8
  %10 = getelementptr inbounds %struct.bpf_prog, %struct.bpf_prog* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  switch i32 %11, label %13 [
    i32 139, label %12
    i32 138, label %12
  ]

12:                                               ; preds = %8, %8
  store %struct.bpf_func_proto* @bpf_bind_proto, %struct.bpf_func_proto** %3, align 8
  br label %21

13:                                               ; preds = %8
  store %struct.bpf_func_proto* null, %struct.bpf_func_proto** %3, align 8
  br label %21

14:                                               ; preds = %2
  store %struct.bpf_func_proto* @bpf_get_socket_cookie_sock_addr_proto, %struct.bpf_func_proto** %3, align 8
  br label %21

15:                                               ; preds = %2
  store %struct.bpf_func_proto* @bpf_get_local_storage_proto, %struct.bpf_func_proto** %3, align 8
  br label %21

16:                                               ; preds = %2
  store %struct.bpf_func_proto* @bpf_sk_storage_get_proto, %struct.bpf_func_proto** %3, align 8
  br label %21

17:                                               ; preds = %2
  store %struct.bpf_func_proto* @bpf_sk_storage_delete_proto, %struct.bpf_func_proto** %3, align 8
  br label %21

18:                                               ; preds = %2
  %19 = load i32, i32* %4, align 4
  %20 = call %struct.bpf_func_proto* @bpf_base_func_proto(i32 %19)
  store %struct.bpf_func_proto* %20, %struct.bpf_func_proto** %3, align 8
  br label %21

21:                                               ; preds = %18, %17, %16, %15, %14, %13, %12, %7
  %22 = load %struct.bpf_func_proto*, %struct.bpf_func_proto** %3, align 8
  ret %struct.bpf_func_proto* %22
}

declare dso_local %struct.bpf_func_proto* @bpf_base_func_proto(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
